--- a/css/main.css
+++ b/css/main.css
@@ -8153,7 +8153,7 @@ input[type=range].green::-webkit-slider-thumb {
  }
 }
 .landing-nav .landing-nav-links .item a.accent:hover {
- background-color:#050821;
+ background-color:#FF187C;
  color:#fff
 }
 .landing-nav .landing-nav-links .item a.accent.alt {
