Convert images to WebP

--- a/css/main.css
+++ b/css/main.css
@@ -8193,7 +8193,7 @@ input[type=range].green::-webkit-slider-thumb {
  width:92%;
  display:block;
  margin:0 auto 10vh;
- background-image:url("../img/hero1.png");
+ background-image:url("../img/hero1.webp");
  background-size:550px auto;
  background-position:100%;
  background-repeat:no-repeat;
